# mahjong-ai-server

./: .dockerignore  .gitignore  .gitmodules  AILib.h  CMakeLists.txt  Cargo.toml  Dockerfile  MIPIface.h  Makefile  docker-compose.yml  install.sh  loader.c  run.sh
.cargo/: config.toml
.github/workflows/: coderabbit_review.yml
ai_bridge/: Cargo.toml
ai_bridge/src/: ai_loader.rs  bindings.rs  interface.rs  lib.rs
ai_bridge/tests/: test_func.rs
ai_bridge/tests/data/: pais.txt
ai_wasm/: Cargo.toml
ai_wasm/src/: lib.rs
app/: Cargo.toml
app/src/: agent.rs  images.rs  main.rs  types.rs  utils.rs
app/src/components/: dora.rs  fulo.rs  kawahai.rs  mod.rs  tehai.rs
app/src/pages/: game_page.rs  mod.rs  result_page.rs  settings_page.rs  title_page.rs
docs/: DEPENDENCIES.md  RUST_CODING_CONVENTIONS.md
mahjong_core/: Cargo.toml
mahjong_core/src/: agari.rs  game_process.rs  lib.rs
server/: Cargo.toml
server/src/: bindings.rs  interface.rs  main.rs
server/tests/: test_func.rs
