[package]
name = "mahjong_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
arrow-array = { version = "50.0.0", optional = true }
arrow-schema = "50.0.0"
chrono = { version = "0.4.33", optional = true }
flatbuffers = { version = "23.5.26", default-features = false }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
parquet = { version = "50.0.0", optional = true }
rand = { version = "0.8.5", optional = true }
thiserror = "1.0.63"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"], optional = true }
walkdir = { version = "2.4.0", optional = true }

[features]
default = ["std"]
std = ["dep:parquet", "dep:arrow-array", "dep:walkdir", "dep:chrono", "dep:rand", "dep:uuid", "itertools/use_std"]
load-pailist = ["std"]
