[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
libc = "0.2.152"
loadlibrary = { path = "../loadlibrary" }
mahjong_core = { path = "../mahjong-app-engine/mahjong_core" }
once_cell = "1.19.0"
